tests/files/parser_tests/should_fail/124.cmdr
//Should not parse
x:  -> float = (a) -> 3.0;